objects/Order.object
<CustomObject>
    <fields>
        <fullName>Current_Invoice_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderAmount__c</fullName>
        <label>OrderAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAP_Invoice_Date__c</fullName>
        <label>Last Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP_Order_ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>